# pyTAB

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
pytab/: __init__.py  api.py  core.py  hwi.py  worker.py
