[tool.poetry]
name = "pytab"
version = "0.1.0"
description = "Python Transcoding Acceleration Benchmark - Client for Jellyfin Hardware Survey"
authors = ["BotBlake <B0TBlake@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
click = "^8.1.7"
requests = "^2.31.0"
wmi = { version = "*", markers = "sys_platform == 'win32'" }
py-cpuinfo = "^9.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
ruff = "^0.3.1"

pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytab = 'pytab.core:main'